--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/react-redux": "^7.1.34",
+    "@use-gesture/react": "^10.3.1",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.11",
     "jwt-decode": "^4.0.0",
