--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.11",
+    "fs": "^0.0.1-security",
     "jwt-decode": "^4.0.0",
     "next": "15.4.4",
     "next-themes": "^0.4.6",
@@ -24,6 +25,7 @@
     "react-icons": "^5.5.0",
     "react-progressive-blur": "^1.0.5",
     "react-redux": "^9.2.0",
+    "sharp": "^0.34.4",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
